finished my first website

--- a/hero-1/hero.html
+++ b/hero-1/hero.html
@@ -41,18 +41,18 @@
 
 <!-- expreience-area start -->
 
-   <section class="expreience-area">
+   <section class="experience-area">
        <h2>expreiences</h2>
-       <div class="half-width single-expreience">
+       <div id="full-stack" class="half-width single-expreience">
        <h2>full stack web dev</h2>
        <h3 class="orange-hihglight">2021-present | pro level web dev</h3> 
        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint magni culpa doloremque natus praesentium quam eaque totam. Sequi, mollitia qui.
        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint magni culpa doloremque natus praesentium quam eaque totam. Sequi, mollitia qui.</p>
 
    </div>
-   <div class="half-width single-expreience">
+   <div id="baby-web"class="half-width single-expreience">
        <h2>baby web developer</h2>
-       <h3  class="orange-hihglight">2020-2021 |programming hero learner
+       <h3 class="orange-hihglight">2020-2021 |programming hero learner
        </h3>
        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi fugit eos tempore beatae ab reiciendis culpa maxime dolorem rerum optio?amet consectetur adipisicing elit. Excepturi fugit eos tempore beatae ab reiciendis culpa maxime dolorem rerum optio?</p>
 
@@ -66,7 +66,9 @@
 
 <!-- expreience-area end -->
 
-
+<footer>
+    <p>@ peter parker 2021,all righes reserves</p>
+</footer>
 
 
 </body>
